[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwallet-gov"
version = "0.3.0"
description = "Financial governance infrastructure for AI agents — spend controls, rules engine, kill switch, and audit trail."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Jack Davis" },
]
keywords = [
    "ai-agents",
    "governance",
    "fintech",
    "spend-controls",
    "langchain",
    "crewai",
    "audit-trail",
    "kill-switch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
]

[project.optional-dependencies]
dashboard = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]

[project.urls]
Homepage = "https://github.com/JackD720/agentwallet-quickstart"
Documentation = "https://github.com/JackD720/agentwallet-quickstart#readme"
Repository = "https://github.com/JackD720/agentwallet-quickstart"
Issues = "https://github.com/JackD720/agentwallet-quickstart/issues"

[project.scripts]
agentwallet = "agentwallet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentwallet"]
